--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,7 @@ build:
 requirements:
   host:
     - python >=3.10,<4.0
-    - poetry-core >=1.1.0
+    - pdm-backend
     - pip
   run:
     - python >=3.10.0,<4.0.0
