--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,16 +11,16 @@ source:
 
 build:
   noarch: python
-  script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  number: 1
 
 requirements:
   host:
-    - python >=3.10,<4.0
+    - python >=3.8,<4.0
     - pdm-backend
     - pip
   run:
-    - python >=3.10.0,<4.0.0
+    - python >=3.8.0,<4.0.0
     - pytest >=7.0.0,<8.0.0
     - robotframework >=6.1.1,<7.0.0
     - deepmerge >=1.1.0,<2.0.0
