--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -20,14 +20,15 @@ requirements:
     - pdm-backend
     - pip
   run:
-    - ansi2html >=1.9.1
-    - pluggy
-    - typing_extensions
-    - python >=3.8.0,<4.0.0
+    - python >=3.8,<4.0
     - pytest <9,>=7
     - robotframework <8.0.0,>=6.1
-    - deepmerge <2.0.0,>=1.1.0
     - basedtyping <0.2,>=0.1.0
+    - ansi2html >=1.9.1
+# Not found in pyproject
+    #- pluggy
+    #- typing_extensions
+    #- deepmerge <2.0.0,>=1.1.0
 
 test:
   imports:
