--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,7 +21,7 @@ requirements:
     - pip
   run:
     - python >=3.9,<4.0
-    - pytest >=7.<9
+    - pytest >=7,<9
     - robotframework >=6.1,<8.0.0
     - basedtyping >=0.1.0,<0.2
     - ansi2html >=1.9.1
